--- a/recipes/chocolateCakeRecipe.html
+++ b/recipes/chocolateCakeRecipe.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Cake Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Chocolate Cake Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/_LJo424x6lRygy8XOPkDOcQBn_4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8691276-chocolate-cream-snack-cakes-4x3-3ae2c348ff204c109c4ec15c7fa0b7b0.jpg" alt="Image of Chocolate Cake" width="300" height="300">
+    <h1 class="h1" id="h1">Chocolate Cake Recipe</h1>
+    <div>
+        <img src="https://www.allrecipes.com/thmb/_LJo424x6lRygy8XOPkDOcQBn_4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8691276-chocolate-cream-snack-cakes-4x3-3ae2c348ff204c109c4ec15c7fa0b7b0.jpg" alt="Image of Chocolate Cake" width="600" height="400">
+    </div>
     <h1>Description</h1>
     <p>This is more than just a cupcake; it’s one that most people would recognize anywhere. Moist chocolate cake is partially hollowed out, filled with plenty of fluffy vanilla cream, and dunked in a gloriously glossy chocolate glaze. Here’s how to match the original magic.</p>
     <p>This recipe will work with any kind of unsweetened cocoa powder, but for the most decadent results, try black cocoa powder, which is treated with an alkaline solution to reduce its acidity. The result is a nostalgic chocolate flavor and a gorgeous, deep black color.</p>
