--- a/recipes/coconutCakeRecipe.html
+++ b/recipes/coconutCakeRecipe.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocunut Cake Recipe</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <h1>Cocunut Cake Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/100JWahahEAY8ptiIhMmT7t7vyo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/KH_052224_AR02861-0b604a8cec444e5ab253e9d6bce5bc5c.jpg" alt="Image of Coconut Cake" width="300" height="300">
+    <div>
+        <img src="https://www.allrecipes.com/thmb/100JWahahEAY8ptiIhMmT7t7vyo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/KH_052224_AR02861-0b604a8cec444e5ab253e9d6bce5bc5c.jpg" alt="Image of Coconut Cake" width="600" height="400">
+    </div>
     <h1>Description</h1>
     <p>If you love coconut, this little cake is a dream come true. Both creamy and soft with a little bit of coconut chew, this starts with a thin layer of fluffy coconut cake (that’s honestly delicious all on its own). A thick layer of decadent coconut custard dresses it up further, finished with a thick cream-based glaze that provides a glossy surface and drips beautifully down the sides of each cake. Sweetened coconut is the perfect finisher and an opportunity to get creative. Leave the coconut as-is for a classic all-white effect; toast it for more color and flavor. Or give a nod to the classic grocery store coconut snack cake by mixing a small amount of gel food coloring into your coconut to tint it a bright color.</p>
     <h1>Ingredients</h1>
