--- a/recipes/lemonCakeRecipe.html
+++ b/recipes/lemonCakeRecipe.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Cake Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lemon Cake Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/-7AgMn6TvOQ6MUihIXkdePny77E=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/KH_052224_AR02391-e814fdbc9d844a4881a7d22eafd37f79.jpg" alt="Image of Lemon Cake" width="300" height="300">
+    <div>
+        <img src="https://www.allrecipes.com/thmb/-7AgMn6TvOQ6MUihIXkdePny77E=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/KH_052224_AR02391-e814fdbc9d844a4881a7d22eafd37f79.jpg" alt="Image of Lemon Cake" width="600" height="400">
+    </div>
     <h1>Description</h1>
     <p>This lemon snack cake has it all—in one sweet and sour slice! The foundation is a moist, super-soft lemon cake. (The flavor gets a boost by rubbing the lemon zest into the sugar before mixing into the batter, as the granules help to extract those glorious natural oils from the zest.)  A just-sweet-enough cream cheese frosting uses a small amount of heavy cream to add thickness and stability while maintaining a dreamy texture. Finally, each cake is doused in a simple lemon glaze for a last zing of juicy flavor.</p>
     <h1>Ingredients</h1>
