--- a/recipes/coconutCakeRecipe.html
+++ b/recipes/coconutCakeRecipe.html
@@ -11,45 +11,51 @@
     <div>
         <img src="https://www.allrecipes.com/thmb/100JWahahEAY8ptiIhMmT7t7vyo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/KH_052224_AR02861-0b604a8cec444e5ab253e9d6bce5bc5c.jpg" alt="Image of Coconut Cake" width="600" height="400">
     </div>
-    <h1>Description</h1>
-    <p>If you love coconut, this little cake is a dream come true. Both creamy and soft with a little bit of coconut chew, this starts with a thin layer of fluffy coconut cake (that’s honestly delicious all on its own). A thick layer of decadent coconut custard dresses it up further, finished with a thick cream-based glaze that provides a glossy surface and drips beautifully down the sides of each cake. Sweetened coconut is the perfect finisher and an opportunity to get creative. Leave the coconut as-is for a classic all-white effect; toast it for more color and flavor. Or give a nod to the classic grocery store coconut snack cake by mixing a small amount of gel food coloring into your coconut to tint it a bright color.</p>
-    <h1>Ingredients</h1>
-    <ul>
-        <li>2 cups flour</li>
-        <li>2 teaspoons baking powder</li>
-        <li>1 teaspoon fine sea salt</li>
-        <li>1/2 cup plus 2 tablespoons unsalted butter, at room temperature </li>
-        <li>1 3/4 cups white sugar</li>
-        <li>4 eggs</li>
-        <li>4 teaspoons vanilla extract</li>
-        <li>1/2 teaspoon coconut extract</li>
-        <li>1 cup buttermilk, at room temperature</li>
-        <li>1 cup sweetened shredded coconut</li>
-        <li>1 (13 ounce) can full-fat coconut milk</li>
-        <li>1/2 cup whipping cream</li>
-        <li>1/4 cup cornstarch</li>
-        <li>4 cups toasted sweetened shredded coconut</li>
-        <li>5 ounces vanilla-flavor candy coating (almond bark), chopped</li>
-        <li>4 cups powdered sugar</li>
-        <li>1/4 cup light corn syrup</li>
-        <li>4 to 6 tablespoons hot water</li>
-    </ul>
-    <h1>Steps</h1>
-    <ol>
-        <li>Position rack in center of oven and preheat to 350°F. Coat a 9x13-inch baking pan with cooking spray. Line bottom of pan with parchment paper and coat parchment with cooking spray.</li>
-        <li>Whisk together flour, baking powder, and 1/2 teaspoon salt in a medium bowl.</li>
-        <li>In the bowl of a stand mixer fitted with a paddle attachment, beat 1/2 cup butter and 1 cup white sugar at medium speed until light and fluffy, 4 to 5 minutes. Add 2 eggs, one at a time, mixing at medium speed and scraping bowl well after each addition. Mix in 11/2 teaspoons vanilla and the coconut extract until combined.</li>
-        <li>Add about one-third of flour mixture to mixer, and mix at low speed until combined. Mix in half of buttermilk. Scrape bowl well. Repeat, alternating between flour mixture and buttermilk, until both are fully incorporated and batter is smooth. Mix in 1 cup sweetened shredded coconut.</li>
-        <li>Pour batter into prepared pan and spread in an even layer. Bake until cake springs back lightly when touched in center, 20 to 25 minutes. Transfer pan to a wire rack and let cool completely.</li>
-        <li>For custard, bring coconut milk and cream to a simmer over medium heat in a medium saucepan. Meanwhile, in a medium bowl, whisk together cornstarch and remaining 3/4 cup white sugar and 1/2 teaspoon salt. Whisk in remaining 2 eggs until well combined.</li>
-        <li>When coconut milk mixture comes to a simmer, whisk about one-fourth of the hot liquid into egg mixture. Add egg mixture to saucepan, whisking constantly to combine.</li>
-        <li>Cook custard over medium heat, whisking constantly, until mixture thickens and big bubbles break the surface, 3 to 4 minutes. Remove from heat and whisk in 11/2 teaspoons vanilla and remaining 2 tablespoons butter.</li>
-        <li>Strain custard through a fine-mesh sieve into a medium bowl and stir in 2 cups toasted coconut. Cover surface of custard with plastic wrap. Let cool 15 minutes at room temperature, then transfer to refrigerator to cool completely.</li>
-        <li>Invert cooled cake onto a cutting board. Remove parchment paper. Use a long serrated knife to cut cake in half horizontally to create two even layers. Spoon cooled custard into center of bottom layer; spread evenly, then add top cake layer.</li>
-        <li>Cover cake loosely with plastic wrap and freeze until firm, at least 2 hours or up to 4 hours.</li>
-        <li>Use a long sharp knife to cut cake into 12 even rectangles. Line a baking sheet with parchment paper, place a wire rack on baking sheet, and arrange cake pieces on rack.</li>
-        <li>For fondant, microwave almond bark on High in a small glass bowl, stirring every 20 seconds, until melted and smooth. In a medium bowl, whisk together powdered sugar, corn syrup, 4 tablespoons hot water, and remaining 1 teaspoon vanilla. Whisk in melted almond bark. Whisk in up to 2 tablespoons more hot water, 1 tablespoon at a time, to reach desired consistency.</li>
-        <li>Spoon 3 tablespoons fondant over each cake piece; use a small offset spatula to spread in an even layer, allowing excess to drip off. Immediately garnish cakes evenly with remaining 2 cups toasted coconut. Chill in an airtight container until ready to serve, up to 4 days.</li>
-    </ol>
+    <h1 class="heading">Description</h1>
+    <div class="description">
+        <p>If you love coconut, this little cake is a dream come true. Both creamy and soft with a little bit of coconut chew, this starts with a thin layer of fluffy coconut cake (that’s honestly delicious all on its own). A thick layer of decadent coconut custard dresses it up further, finished with a thick cream-based glaze that provides a glossy surface and drips beautifully down the sides of each cake. Sweetened coconut is the perfect finisher and an opportunity to get creative. Leave the coconut as-is for a classic all-white effect; toast it for more color and flavor. Or give a nod to the classic grocery store coconut snack cake by mixing a small amount of gel food coloring into your coconut to tint it a bright color.</p>
+    </div>
+    <h1 class="heading">Ingredients</h1>
+    <div class="ingredients">
+        <ul>
+            <li>2 cups flour</li>
+            <li>2 teaspoons baking powder</li>
+            <li>1 teaspoon fine sea salt</li>
+            <li>1/2 cup plus 2 tablespoons unsalted butter, at room temperature </li>
+            <li>1 3/4 cups white sugar</li>
+            <li>4 eggs</li>
+            <li>4 teaspoons vanilla extract</li>
+            <li>1/2 teaspoon coconut extract</li>
+            <li>1 cup buttermilk, at room temperature</li>
+            <li>1 cup sweetened shredded coconut</li>
+            <li>1 (13 ounce) can full-fat coconut milk</li>
+            <li>1/2 cup whipping cream</li>
+            <li>1/4 cup cornstarch</li>
+            <li>4 cups toasted sweetened shredded coconut</li>
+            <li>5 ounces vanilla-flavor candy coating (almond bark), chopped</li>
+            <li>4 cups powdered sugar</li>
+            <li>1/4 cup light corn syrup</li>
+            <li>4 to 6 tablespoons hot water</li>
+        </ul>
+    </div>
+    <h1 class="heading">Steps</h1>
+    <div class="steps">
+        <ol>
+            <li>Position rack in center of oven and preheat to 350°F. Coat a 9x13-inch baking pan with cooking spray. Line bottom of pan with parchment paper and coat parchment with cooking spray.</li>
+            <li>Whisk together flour, baking powder, and 1/2 teaspoon salt in a medium bowl.</li>
+            <li>In the bowl of a stand mixer fitted with a paddle attachment, beat 1/2 cup butter and 1 cup white sugar at medium speed until light and fluffy, 4 to 5 minutes. Add 2 eggs, one at a time, mixing at medium speed and scraping bowl well after each addition. Mix in 11/2 teaspoons vanilla and the coconut extract until combined.</li>
+            <li>Add about one-third of flour mixture to mixer, and mix at low speed until combined. Mix in half of buttermilk. Scrape bowl well. Repeat, alternating between flour mixture and buttermilk, until both are fully incorporated and batter is smooth. Mix in 1 cup sweetened shredded coconut.</li>
+            <li>Pour batter into prepared pan and spread in an even layer. Bake until cake springs back lightly when touched in center, 20 to 25 minutes. Transfer pan to a wire rack and let cool completely.</li>
+            <li>For custard, bring coconut milk and cream to a simmer over medium heat in a medium saucepan. Meanwhile, in a medium bowl, whisk together cornstarch and remaining 3/4 cup white sugar and 1/2 teaspoon salt. Whisk in remaining 2 eggs until well combined.</li>
+            <li>When coconut milk mixture comes to a simmer, whisk about one-fourth of the hot liquid into egg mixture. Add egg mixture to saucepan, whisking constantly to combine.</li>
+            <li>Cook custard over medium heat, whisking constantly, until mixture thickens and big bubbles break the surface, 3 to 4 minutes. Remove from heat and whisk in 11/2 teaspoons vanilla and remaining 2 tablespoons butter.</li>
+            <li>Strain custard through a fine-mesh sieve into a medium bowl and stir in 2 cups toasted coconut. Cover surface of custard with plastic wrap. Let cool 15 minutes at room temperature, then transfer to refrigerator to cool completely.</li>
+            <li>Invert cooled cake onto a cutting board. Remove parchment paper. Use a long serrated knife to cut cake in half horizontally to create two even layers. Spoon cooled custard into center of bottom layer; spread evenly, then add top cake layer.</li>
+            <li>Cover cake loosely with plastic wrap and freeze until firm, at least 2 hours or up to 4 hours.</li>
+            <li>Use a long sharp knife to cut cake into 12 even rectangles. Line a baking sheet with parchment paper, place a wire rack on baking sheet, and arrange cake pieces on rack.</li>
+            <li>For fondant, microwave almond bark on High in a small glass bowl, stirring every 20 seconds, until melted and smooth. In a medium bowl, whisk together powdered sugar, corn syrup, 4 tablespoons hot water, and remaining 1 teaspoon vanilla. Whisk in melted almond bark. Whisk in up to 2 tablespoons more hot water, 1 tablespoon at a time, to reach desired consistency.</li>
+            <li>Spoon 3 tablespoons fondant over each cake piece; use a small offset spatula to spread in an even layer, allowing excess to drip off. Immediately garnish cakes evenly with remaining 2 cups toasted coconut. Chill in an airtight container until ready to serve, up to 4 days.</li>
+        </ol>
+    </div>
 </body>
 </html>
